CSS bugfix to two-column popups - the right column was too wide and was being pushed below the left column

--- a/static/css/pad.css
+++ b/static/css/pad.css
@@ -1276,7 +1276,6 @@ label {
  float: left;
  width: 50%;
  box-sizing: border-box;
- padding-left: 10px;
 }
 
 #settingsmenu, #importexport, #embed {
